syntax = "proto3";

package com.giyeok.bibix.runner;

import "repo.proto";
import "google/protobuf/duration.proto";

option java_outer_classname = "RunConfigProto";

message RunConfig {
  int32 max_threads = 1;
  com.giyeok.bibix.repo.LogLevel min_log_level = 2;
  google.protobuf.Duration target_result_reuse_duration = 3;
}
