syntax = "proto3";

package com.giyeok.bibix.runner;

option java_outer_classname = "BibixRepoProto";

import "ids.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message BibixRepo {
  string repo_schema_version = 1;
  // source id hash -> source id
  // target id hash -> target id(including args map & input hashes)

  map<string, ObjectInfo> objects = 2;
  map<string, bool> building_targets = 3;
  map<string, string> object_names = 4;

  map<string, SourceId> sources = 5;
  map<string, ObjectId> object_ids = 6;
}

message ObjectInfo {
  // object 자체에 대한 정보는 별로 필요 없을것 같은데
  bytes inputs_hash = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
  google.protobuf.Duration duration = 4;
}
